--- a/templates/index.html
+++ b/templates/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
+        <meta name="description" content="RedeCuida Home Care: app de serviços médicos domiciliares" />
+        <meta name="author" content="RedeCuida Home Care app" />
         <title>RedeCuida - Home Care </title>
       <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
