--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,22 @@
         <title>RedeCuida - Home Care </title>
       <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
 
+
+      <!-- Open Graph / Facebook -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://redecuida.life/">
+<meta property="og:title" content="RedeCuida Home Care: app de serviços médicos domiciliares">
+<meta property="og:description" content="Cuidadores, Enfermeiros, Fisioterapeutas e profissionais de home care">
+<meta property="og:image" content="static/img/meta-image.png">
+
+
+<!-- Twitter -->
+<meta property="twitter:card" content="summary_large_image">
+<meta property="twitter:url" content="https://redecuida.life/">
+<meta property="twitter:title" content="Cuidadores, Enfermeiros, Fisioterapeutas e profissionais de home care">
+<meta property="twitter:description" content="RedeCuida Home Care: app de serviços médicos domiciliares">
+<meta property="twitter:image" content="static/img/meta-image.png">
+
         <link rel="apple-touch-icon" sizes="180x180" href="static/img/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="static/img/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="static/img/favicon-16x16.png">
