+button_agende atendimento

--- a/templates/seja-parceiro-redecuida.html
+++ b/templates/seja-parceiro-redecuida.html
@@ -57,12 +57,23 @@
                             <h1 class="display-2 lh-1 mb-3">Se você é cuidador, enfermeiro, fisioterapeuta ou profissional de home care</h1>
                             <h2 class="text-muted fw-normal  mb-5">Consiga mais pacientes, direto do seu celular. Faça parte da RedeCuida</h2>
                             <div class="d-flex flex-column flex-lg-row align-items-center">
+
+                                <button class="btn btn-primary rounded-pill px-2 mb-3 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
+
+                      
+                        <span class="d-flex align-items-center">
+                            <i class="text-fill me-2"></i><span class="small" href="#agende_visita">Quero me cadastrar</span>
+                        </span>
+ </button>
+                              
                               <!--
                                 <a class="me-lg-3 mb-4 mb-lg-0" href="#!"><img class="app-badge" src="static/img/google-play-badge.svg" alt="..." /></a>
                                 <a href="#!"><img class="app-badge" src="static/img/app-store-badge.svg" alt="..." /></a> -->
                             </div>
                         </div>
                     </div>
+
+                    
                     <div class="col-lg-6">
                         <!-- Masthead device mockup feature-->
                         <div class="masthead-device-mockup">
