--- a/templates/index.html
+++ b/templates/index.html
@@ -56,6 +56,8 @@
   <!-- ou link roll #download -->
                       
                     </ul>
+
+                    <!--
                     <button class="btn btn-primary rounded-pill px-2 mb-3 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
 
                       
@@ -63,6 +65,7 @@
                             <i class="bi bi-whatsapp text-fill me-3"></i><span class="small" href="#agende_visita">Agende um atendimento</span>
                         </span>
                     </button>
+                    -->
                 </div>
             </div>
         </nav>
@@ -76,7 +79,14 @@
                             <h1 class="display-2 lh-1 mb-3">Cuidadores, Enfermeiros,  Fisioterapeutas e profissionais de home care</h1>
                             
                             <p class="lead fw-normal text-muted mb-5">Cuidamos de Gente. Tenha o apoio e a visita dos melhores profissionais de saúde. Agende uma visita de atendimento</p>
-                            
+
+                            <button class="btn btn-primary rounded-pill px-2 mb-3 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
+
+                      
+                        <span class="d-flex align-items-center">
+                            <i class="bi bi-whatsapp text-fill me-3"></i><span class="small" href="#agende_visita">Agende um atendimento</span>
+                        </span>
+                              </button>
                             <div class="d-flex flex-column flex-lg-row align-items-center">
                               <!--
                                 <a class="me-lg-3 mb-4 mb-lg-0" href="#!"><img class="app-badge" src="static/img/google-play-badge.svg" alt="..." />
