+changes botao agendar +changes wapp button

--- a/templates/index.html
+++ b/templates/index.html
@@ -424,6 +424,7 @@
                 <!-- Core theme JS-->
         <script src="static/js/scripts.js"></script>
 
+<script>window.rwbp={email:'rafaelfernandesmarcondes@gmail.com',phone:'+5511983600707',message:'Ola',lang:'pt-BR'}</script><script defer async src='https://duz4dqsaqembt.cloudfront.net/client/whats.js'></script>
         
     </body>
 </html>
