--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
 <link rel="icon" type="image/png" sizes="16x16" href="static/img/favicon-16x16.png">
 <link rel="manifest" href="{{url_for('static', filename='manifest.json')}}">
 
-
+<link rel="fonts" href="{{url_for('static', filename='manifest.json')}}">
         <!-- Bootstrap icons-->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
         <!-- Google fonts-->
@@ -44,6 +44,10 @@
         
 
         <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/styles.css') }}">
+
+          <script async src="static/js/lazysizes.min.js" ></script>
+  <!-- Images End -->
+</body>
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-200694126-1">
@@ -74,15 +78,7 @@
                       
                     </ul>
 
-                    <!--
-                    <button class="btn btn-primary rounded-pill px-2 mb-3 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
-
-                      
-                        <span class="d-flex align-items-center">
-                            <i class="bi bi-whatsapp text-fill me-3"></i><span class="small" href="#agende_visita">Agende um atendimento</span>
-                        </span>
-                    </button>
-                    -->
+                    
                 </div>
             </div>
         </nav>
@@ -97,7 +93,7 @@
                             
                             <p class="lead fw-normal text-muted mb-5">Cuidamos de Gente. Tenha o apoio e a visita dos melhores profissionais de saúde. Agende uma visita de atendimento</p>
 
-                            <button class="btn btn-primary rounded-pill px-2 mb-3 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
+                            <button aria-label="Left Align" class="btn btn-primary rounded-pill px-2 mb-3 mb-lg-0" data-bs-toggle="modal" data-bs-target="#feedbackModal">
 
                       
                         <span class="d-flex align-items-center">
@@ -105,11 +101,7 @@
                         </span>
                               </button>
                             <div class="d-flex flex-column flex-lg-row align-items-center">
-                              <!--
-                                <a class="me-lg-3 mb-4 mb-lg-0" href="#!"><img class="app-badge" src="static/img/google-play-badge.svg" alt="..." />
-                                <!--
-                                </a>
-                                <a href="#!"><img class="app-badge" src="static/img/app-store-badge.svg" alt="..." /></a> -->
+                              
                             </div>
                         </div>
                     </div>
@@ -125,19 +117,11 @@
                                     </linearGradient>
                                 </defs>
                                 
-                          <!--
-                                <circle cx="50" cy="50" r="50"></circle></svg
-                            ><svg class="shape-1 d-none d-sm-block" viewBox="0 0 240.83 240.83" xmlns="http://www.w3.org/2000/svg">
-                                <rect x="-32.54" y="78.39" width="305.92" height="84.05" rx="42.03" transform="translate(120.42 -49.88) rotate(45)"></rect>
-                                <rect x="-32.54" y="78.39" width="305.92" height="84.05" rx="42.03" transform="translate(-49.88 120.42) rotate(-45)"></rect></svg
-                            ><svg class="shape-2 d-none d-sm-block" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg"><circle cx="50" cy="50" r="50"></circle></svg> -->
+                          
                             <div class="device-wrapper">
                                 <div class="device" data-device="iPhoneX" data-orientation="portrait" data-color="black">
                                     <div class="screen bg-black">
-                                        <!-- PUT CONTENTS HERE:-->
-                                        <!-- * * This can be a video, image, or just about anything else.-->
-                                        <!-- * * Set the max width of your media to 100% and the height to-->
-                                        <!-- * * 100% like the demo example below.-->
+                                       
                                         <video muted="muted" autoplay="" loop="" style="max-width: 100%; height: 100%"><source src="static/img/demo-screen.mp4" type="video/mp4" /></video>
                                     </div>
                                 </div>
@@ -249,7 +233,7 @@
                         </div>
                     </div>
                     <div class="col-sm-8 col-md-6">
-                        <div class="px-5 px-sm-0"><img class="img-fluid rounded-circle" src="https://source.unsplash.com/TeWwYARfcM4/900x900" alt="..." /></div>
+                        <div class="px-5 px-sm-0"><img class="img-fluid rounded-circle"  src="https://source.unsplash.com/TeWwYARfcM4/900x900" class="lazyload" alt="..." /></div>
                     </div>
                 </div>
             </div>
@@ -411,25 +395,7 @@
       }
       </script>
                             
-                            <!--
-                            <div class="form-floating mb-4">
-                                <input class="form-control" id="inputName" type="text" placeholder="Enter your name..." />
-                                <label for="inputName">Nome</label>
-                            </div>
-                            <div class="form-floating mb-4">
-                                <input class="form-control" id="inputEmail" type="email" placeholder="nome@gmail.com" />
-                                <label for="inputEmail">Email</label>
-                            </div>
-                            <div class="form-floating mb-4">
-                                <input class="form-control" id="inputPhone" type="tel" placeholder="(123) 456-7890" />
-                                <label for="inputPhone">Telefone</label>
-                            </div>
-                            <div class="form-floating mb-4">
-                                <textarea class="form-control" id="inputMessage" placeholder="Enter your message here..." style="height: 10rem"></textarea>
-                                <label for="inputMessage">Descreva brevamente sua necessidade</label>
-                            </div>
-                            <div class="d-grid"><button class="btn btn-primary rounded-pill py-3" type="submit">Solicitar </button></div>
--->
+                         
 
                         </form>
                     </div>
